# calculator-by-rs

./: Cargo.toml  Readme.md
calgui/: Cargo.toml  build.rs
calgui/src/: main.rs
calgui/ui/: calculate-ui.slint  widgets.slint
calgui/ui/widgets/: button.slint  message-box.slint  styling.slint  text_line_edit.slint  widgets.slint
libcalcore/: Cargo.toml
libcalcore/src/: lib.rs
libcalcore/src/express/: error.rs  lexer.rs  mod.rs  node.rs  parser.rs  token.rs
libcalcore/src/express/parser/: lookahead.rs
