[package]
name = "calgui"
version = "0.1.0"
edition = "2021"
authors = ["StudyLessShape"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.1.1"
libcalcore = { path = "../libcalcore" }

[build-dependencies]
slint-build = "*"
